2007-11-23  Wakaba  <wakaba@suika.fam.cx>

	* NanoDOM.pm (get_user_data, set_user_data): New methods.

	* HTML.pm.src: A flag for character references in attribute
	values are added.  Set |manakai_has_reference| user data
	to |charset| attribute.

2007-11-23  Wakaba  <wakaba@suika.fam.cx>

	* NanoDOM.pm (input_encoding, manakai_charset, manakai_has_bom): New
	attributes.

	* ContentChecker.pm (check_document): Warn if charset requirements
	cannot be tested.

2007-11-19  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src (parse_byte_string): Detect charset
	by universalchardet if charset parameter is not specified.

	* Makefile (Charset-all, Charset-clean): New rules.

2007-11-18  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm (check_document): Check the existence
	of character encoding declaration and selection of encoding
	for HTML document.

2007-11-18  Wakaba  <wakaba@suika.fam.cx>

	* ContentType.pm (get_sniffed_type): Return also the official
	type in list context.

2007-11-18  Wakaba  <wakaba@suika.fam.cx>

	* ContentType.pm: Sniffing with leading white space
	ignoring (HTML5 revisions 1013 and 1016).

2007-11-18  Wakaba  <wakaba@suika.fam.cx>

	* ContentType.pm: HTML5 revision 1013 changes, except for leading
	white spaces, are implemented.

2007-11-11  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src (parse_char_string): Set |inner_encoding|
	attribute if possible.

2007-11-11  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src (parse_byte_string): New method.
	(parse_char_string): New alias for |parse_string|.
	(main phase): Invoking "change the encoding" algorithm if desired.

	* HTML.pod: Updated.

2007-11-11  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pod (get_inner_html): Removed.

	* Makefile (HTML-all, HTML-clean): New.

2007-11-11  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src (get_inner_html): Removed (moved to HTML/Serializer.pm).

2007-11-08  Wakaba  <wakaba@suika.fam.cx>

	* mklinktypelist.pl: s/noreferer/noreferrer/ (HTML5 revision 1132).
