@@ -1,7 +1,7 @@
 1..1448
 # Running under perl version 5.008007 for linux
-# Current time local: Fri Nov 23 16:31:48 2007
-# Current time GMT:   Fri Nov 23 07:31:48 2007
+# Current time local: Fri Nov 23 20:59:53 2007
+# Current time GMT:   Fri Nov 23 11:59:53 2007
 # Using Test.pm version 1.25
 # t/content-model-1.dat
 ok 1
