@@ -1,7 +1,7 @@
 1..980
 # Running under perl version 5.008007 for linux
-# Current time local: Fri Nov 23 16:31:16 2007
-# Current time GMT:   Fri Nov 23 07:31:16 2007
+# Current time local: Fri Nov 23 20:59:31 2007
+# Current time GMT:   Fri Nov 23 11:59:31 2007
 # Using Test.pm version 1.25
 # t/tokenizer-test-2.dat
 ok 1
