@@ -1,5 +1,10 @@
 2007-11-23  Wakaba  <wakaba@suika.fam.cx>
 
+	* URIChecker.pm: Make RFC 3986 should-level errors
+	warnings (rather than SHOULD-level errors).
+
+2007-11-23  Wakaba  <wakaba@suika.fam.cx>
+
 	* NanoDOM.pm (get_user_data, set_user_data): New methods.
 
 	* HTML.pm.src: A flag for character references in attribute
